# OpenSceneEditor

./: CMakeLists.txt  CollectNormalsVisitor.cpp  CollectNormalsVisitor.hpp  EnumToNameFunction.cpp  EventManager.cpp  EventManager.h  EventManager.hpp  EventNodeSelected.h  GeometryUtils.cpp  GeometryUtils.h  ImGuiHandler.cpp  ImGuiHandler.hpp  ImGuiWidgets.cpp  ImGuiWidgets.hpp  Utils.cpp  Utils.hpp  main.cpp  stringutils.hpp  tinyfiledialogs.h
